k8s/base/dashboard-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sentinel-dashboard
  labels:
    app: sentinel-dashboard
spec:
  type: ClusterIP
  selector:
    app: sentinel-dashboard
  ports:
    - name: http
      port: 8940
      targetPort: 8940
      protocol: TCP
